Update link in index.html to point to scam-calls.html

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             Fraudsters use fake bank alerts, OTP requests, and prize scams.
             Learn how to detect red flags before sharing any personal details.
         </p>
-        <a href="#" class="read-btn">Read More</a>
+        <a href="scam-calls.html" class="read-btn">Read More</a>
     </div>
 
     <div class="card">
