Update links in index.html for mobile security and 2FA

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             Protect your smartphone from malware, phishing apps,
             and spyware using these essential cybersecurity practices.
         </p>
-        <a href="#" class="read-btn">Read More</a>
+        <a href="mobile-security.html" class="read-btn">Read More</a>
     </div>
 
     <div class="card">
@@ -140,7 +140,7 @@
             Even if hackers steal your password, 2FA can prevent
             unauthorized access to your accounts.
         </p>
-        <a href="#" class="read-btn">Read More</a>
+        <a href="two-factor.html" class="read-btn">Read More</a>
     </div>
 
 </div>
