--- a/index.html
+++ b/index.html
@@ -171,4 +171,9 @@ body.loaded {
 </footer>
 
 </body>
+    <script>
+window.addEventListener("load", function() {
+    document.body.classList.add("loaded");
+});
+</script>
 </html>
