--- a/mobile-security.html
+++ b/mobile-security.html
@@ -4,10 +4,20 @@
     <title>Top 5 Mobile Security Tips</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        body {
+       body {
+    margin: 0;
+    font-family: 'Segoe UI', sans-serif;
+    background: #0b1120;
+    color: #e2e8f0;
+
     opacity: 0;
     transform: translateY(20px);
     transition: opacity 0.6s ease, transform 0.6s ease;
+}
+
+body.loaded {
+    opacity: 1;
+    transform: translateY(0);
 }
 
 body.loaded {
