Add script to add 'loaded' class on page load

--- a/mobile-security.html
+++ b/mobile-security.html
@@ -55,4 +55,9 @@ body.loaded {
 <p><a href="index.html">← Back to Blog</a></p>
 
 </body>
+    <script>
+window.addEventListener("load", function() {
+    document.body.classList.add("loaded");
+});
+</script>
 </html>
