Update title and content for scam calls article

--- a/scam-calls.html
+++ b/scam-calls.html
@@ -1,35 +1,109 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>How to Identify Scam Calls</title>
+    <title>How to Identify Scam Calls in India</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             background:#0b1120;
-            color:white;
-            font-family:Arial;
+            color:#e2e8f0;
+            font-family:Arial, sans-serif;
             padding:40px;
-            max-width:800px;
+            max-width:900px;
             margin:auto;
+            line-height:1.7;
         }
-        h1 { color:#00f2ff; }
-        a { color:#00f2ff; text-decoration:none; }
+
+        h1, h2 {
+            color:#00f2ff;
+        }
+
+        .warning {
+            background:#1e293b;
+            padding:20px;
+            border-left:5px solid red;
+            margin:20px 0;
+            border-radius:6px;
+        }
+
+        a {
+            color:#00f2ff;
+            text-decoration:none;
+        }
+
+        body {
+            opacity: 0;
+            transform: translateY(20px);
+            transition: opacity 0.6s ease, transform 0.6s ease;
+        }
+
+        body.loaded {
+            opacity: 1;
+            transform: translateY(0);
+        }
     </style>
 </head>
+
 <body>
 
 <h1>How to Identify Scam Calls in India</h1>
 
-<p>Scam calls are increasing rapidly. Follow these rules:</p>
+<p><strong>Published:</strong> March 2026 | By WCS Team</p>
+
+<p>
+Cybercrime in India is increasing rapidly. Fraudsters use psychological tricks,
+fear tactics, and fake identities to steal money and personal information.
+Understanding how scam calls work is the first step in protecting yourself.
+</p>
+
+<h2>Common Types of Scam Calls</h2>
 
 <ul>
-<li>Never share OTP with anyone.</li>
-<li>Do not share bank details on call.</li>
-<li>Government agencies never ask for money via call.</li>
-<li>Always verify official websites.</li>
+<li>Fake bank verification calls asking for OTP</li>
+<li>KYC update fraud calls</li>
+<li>Lottery or prize-winning scams</li>
+<li>Police or government impersonation scams</li>
+<li>Loan approval or job offer scams</li>
 </ul>
 
+<h2>Red Flags to Watch For</h2>
+
+<ul>
+<li>Caller creates urgency or panic</li>
+<li>Asks for OTP, ATM PIN, or UPI details</li>
+<li>Requests remote access to your phone</li>
+<li>Threatens account suspension</li>
+<li>Offers unrealistic rewards</li>
+</ul>
+
+<div class="warning">
+<strong>Important:</strong> Banks and government agencies never ask for OTP,
+password, or PIN over phone calls.
+</div>
+
+<h2>How to Protect Yourself</h2>
+
+<ul>
+<li>Do not share sensitive information on calls.</li>
+<li>Verify official numbers from bank websites.</li>
+<li>Use call-blocking and fraud detection apps.</li>
+<li>Report fraud to Cyber Crime Portal (cybercrime.gov.in).</li>
+</ul>
+
+<h2>Conclusion</h2>
+
+<p>
+Staying calm and aware can prevent financial loss.
+Cybersecurity awareness is the strongest defense against fraud.
+</p>
+
 <p><a href="index.html">← Back to Blog</a></p>
+
+<script>
+window.addEventListener("load", function() {
+    document.body.classList.add("loaded");
+});
+</script>
 
 </body>
 </html>
