Update title and enhance mobile security tips content

--- a/mobile-security.html
+++ b/mobile-security.html
@@ -1,63 +1,127 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Top 5 Mobile Security Tips</title>
+    <title>Top 5 Mobile Security Tips for 2026</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-       body {
-    margin: 0;
-    font-family: 'Segoe UI', sans-serif;
-    background: #0b1120;
-    color: #e2e8f0;
-
-    opacity: 0;
-    transform: translateY(20px);
-    transition: opacity 0.6s ease, transform 0.6s ease;
-}
-
-body.loaded {
-    opacity: 1;
-    transform: translateY(0);
-}
-
-body.loaded {
-    opacity: 1;
-    transform: translateY(0);
-}
-        
         body {
             background:#0b1120;
-            color:white;
-            font-family:Arial;
+            color:#e2e8f0;
+            font-family:Arial, sans-serif;
             padding:40px;
-            max-width:800px;
+            max-width:900px;
             margin:auto;
+            line-height:1.7;
+
+            opacity: 0;
+            transform: translateY(20px);
+            transition: opacity 0.6s ease, transform 0.6s ease;
         }
-        h1 { color:#00f2ff; }
-        a { color:#00f2ff; text-decoration:none; }
-        li { margin-bottom:10px; }
+
+        body.loaded {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        h1, h2 {
+            color:#00f2ff;
+        }
+
+        .tip-box {
+            background:#1e293b;
+            padding:20px;
+            margin:20px 0;
+            border-radius:6px;
+        }
+
+        .highlight {
+            color:#00f2ff;
+            font-weight:bold;
+        }
+
+        a {
+            color:#00f2ff;
+            text-decoration:none;
+        }
     </style>
 </head>
+
 <body>
 
 <h1>Top 5 Mobile Security Tips for 2026</h1>
 
-<p>Follow these important steps to protect your smartphone:</p>
+<p><strong>Published:</strong> March 2026 | By WCS Team</p>
 
-<ul>
-<li>Install apps only from official Play Store or trusted sources.</li>
-<li>Keep your phone updated with latest security patches.</li>
-<li>Avoid clicking unknown links in SMS or WhatsApp.</li>
-<li>Use strong passwords and enable fingerprint or face lock.</li>
-<li>Enable Two-Factor Authentication (2FA) on important accounts.</li>
-</ul>
+<p>
+Smartphones have become our digital wallets, personal diaries,
+and communication hubs. Protecting your mobile device is no longer optional.
+Here are the top five security practices every smartphone user should follow.
+</p>
+
+<h2>1. Install Apps Only from Trusted Sources</h2>
+
+<div class="tip-box">
+Download apps only from official stores like Google Play Store.
+Avoid APK files from unknown websites.
+</div>
+
+<p>
+Malicious apps can steal data, track activity, or install spyware.
+Always check app reviews and developer details before installing.
+</p>
+
+<h2>2. Keep Your Phone Updated</h2>
+
+<div class="tip-box">
+Enable automatic updates for system software and apps.
+</div>
+
+<p>
+Security updates fix vulnerabilities that hackers exploit.
+Outdated software increases the risk of cyber attacks.
+</p>
+
+<h2>3. Avoid Clicking Suspicious Links</h2>
+
+<p>
+Phishing links often come through SMS, email, or WhatsApp.
+Never click unknown links asking for personal or financial information.
+</p>
+
+<h2>4. Use Strong Passwords & Biometric Lock</h2>
+
+<div class="tip-box">
+Use a combination of letters, numbers, and symbols.
+Enable fingerprint or face recognition.
+</div>
+
+<p>
+Weak passwords make it easier for attackers to access your data.
+Biometric locks add an extra layer of protection.
+</p>
+
+<h2>5. Enable Two-Factor Authentication (2FA)</h2>
+
+<p>
+Even if someone steals your password, 2FA prevents unauthorized access.
+Use OTP verification or authentication apps for banking and social media accounts.
+</p>
+
+<h2>Conclusion</h2>
+
+<p>
+Mobile security is about awareness and prevention.
+Simple habits can significantly reduce the risk of cyber threats.
+Stay informed. Stay protected.
+</p>
 
 <p><a href="index.html">← Back to Blog</a></p>
 
-</body>
-    <script>
+<script>
 window.addEventListener("load", function() {
     document.body.classList.add("loaded");
 });
 </script>
+
+</body>
 </html>
