--- a/index.html
+++ b/index.html
@@ -1,53 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>WCS Cybersecurity Blog</title>
+    <title>World Cyber Shield | Cybersecurity Blog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style>
-       
-      body {
-    margin: 0;
-    font-family: 'Segoe UI', sans-serif;
-    background: #0b1120;
-    color: #e2e8f0;
-
-    opacity: 0;
-    transform: translateY(20px);
-    transition: opacity 0.6s ease, transform 0.6s ease;
-}
-
-body.loaded {
-    opacity: 1;
-    transform: translateY(0);
-}
-
-body.loaded {
-    opacity: 1;
-    transform: translateY(0);
-}
         body {
             margin: 0;
             font-family: 'Segoe UI', sans-serif;
             background: #0b1120;
             color: #e2e8f0;
+
+            opacity: 0;
+            transform: translateY(20px);
+            transition: opacity 0.6s ease, transform 0.6s ease;
+        }
+
+        body.loaded {
+            opacity: 1;
+            transform: translateY(0);
         }
 
         header {
             background: linear-gradient(90deg, #0f2027, #203a43, #2c5364);
-            padding: 40px 20px;
+            padding: 60px 20px;
             text-align: center;
         }
 
         header h1 {
             color: #00f2ff;
-            font-size: 36px;
+            font-size: 42px;
             margin-bottom: 10px;
         }
 
         header p {
             font-size: 18px;
-            opacity: 0.8;
+            opacity: 0.9;
         }
 
         nav {
@@ -66,7 +54,22 @@ body.loaded {
         .container {
             max-width: 1100px;
             margin: auto;
-            padding: 40px 20px;
+            padding: 50px 20px;
+        }
+
+        .featured {
+            background: #1e293b;
+            padding: 30px;
+            border-radius: 12px;
+            margin-bottom: 40px;
+            box-shadow: 0 0 20px rgba(0,242,255,0.1);
+        }
+
+        .featured h2 {
+            color: #00f2ff;
+        }
+
+        .blog-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 25px;
@@ -77,21 +80,16 @@ body.loaded {
             border-radius: 10px;
             padding: 25px;
             transition: 0.3s;
-            box-shadow: 0 0 15px rgba(0, 242, 255, 0.1);
+            box-shadow: 0 0 15px rgba(0,242,255,0.1);
         }
 
         .card:hover {
             transform: translateY(-8px);
-            box-shadow: 0 0 25px rgba(0, 242, 255, 0.3);
+            box-shadow: 0 0 25px rgba(0,242,255,0.3);
         }
 
-        .card h2 {
+        .card h3 {
             color: #00f2ff;
-        }
-
-        .card p {
-            line-height: 1.6;
-            font-size: 15px;
         }
 
         .read-btn {
@@ -105,17 +103,28 @@ body.loaded {
             border-radius: 5px;
         }
 
-        footer {
+        .author {
+            text-align: center;
+            margin-top: 60px;
+            padding: 30px;
             background: #111827;
+            border-top: 2px solid #00f2ff;
+        }
+
+        .author h3 {
+            color: #00f2ff;
+        }
+
+        footer {
             text-align: center;
             padding: 20px;
-            margin-top: 40px;
-            border-top: 2px solid #00f2ff;
+            background: #0f172a;
+            border-top: 1px solid #1e293b;
         }
 
         @media(max-width:768px){
             header h1 {
-                font-size: 26px;
+                font-size: 30px;
             }
         }
     </style>
@@ -124,12 +133,12 @@ body.loaded {
 <body>
 
 <header>
-    <h1>World Cyber Shield Blog</h1>
-    <p>Cyber Awareness • Fraud Protection • Digital Security News</p>
+    <h1>World Cyber Shield</h1>
+    <p>Cyber Awareness • Fraud Protection • Digital Security Insights</p>
 </header>
 
 <nav>
-    <a href="#">Home</a>
+    <a href="index.html">Home</a>
     <a href="#">Articles</a>
     <a href="#">About</a>
     <a href="#">Contact</a>
@@ -137,43 +146,58 @@ body.loaded {
 
 <div class="container">
 
-    <div class="card">
-        <h2>How to Identify Scam Calls in India</h2>
+    <div class="featured">
+        <h2>Featured Article: Protecting India from Digital Fraud</h2>
         <p>
-            Fraudsters use fake bank alerts, OTP requests, and prize scams.
-            Learn how to detect red flags before sharing any personal details.
+            Cybercrime is rising rapidly across India. From phishing scams to
+            banking fraud, users must stay informed and alert.
+            Explore expert insights and practical security tips.
         </p>
-        <a href="scam-calls.html" class="read-btn">Read More</a>
+        <a href="scam-calls.html" class="read-btn">Read Featured Article</a>
     </div>
 
-    <div class="card">
-        <h2>Top 5 Mobile Security Tips for 2026</h2>
-        <p>
-            Protect your smartphone from malware, phishing apps,
-            and spyware using these essential cybersecurity practices.
-        </p>
-        <a href="mobile-security.html" class="read-btn">Read More</a>
-    </div>
+    <div class="blog-grid">
 
-    <div class="card">
-        <h2>Why Two-Factor Authentication is Important</h2>
-        <p>
-            Even if hackers steal your password, 2FA can prevent
-            unauthorized access to your accounts.
-        </p>
-        <a href="two-factor.html" class="read-btn">Read More</a>
+        <div class="card">
+            <h3>How to Identify Scam Calls</h3>
+            <p>Learn the warning signs of fraud calls and how to protect your financial data.</p>
+            <a href="scam-calls.html" class="read-btn">Read More</a>
+        </div>
+
+        <div class="card">
+            <h3>Top 5 Mobile Security Tips</h3>
+            <p>Simple steps every smartphone user should follow in 2026.</p>
+            <a href="mobile-security.html" class="read-btn">Read More</a>
+        </div>
+
+        <div class="card">
+            <h3>Why Two-Factor Authentication Matters</h3>
+            <p>Understand how 2FA protects your accounts from unauthorized access.</p>
+            <a href="two-factor.html" class="read-btn">Read More</a>
+        </div>
+
     </div>
 
 </div>
 
+<div class="author">
+    <h3>About the Author</h3>
+    <p><strong>Raju Zevenor</strong></p>
+    <p>
+        Founder of World Cyber Shield (WCS). Passionate about cybersecurity,
+        fraud prevention, and spreading digital awareness across India.
+    </p>
+</div>
+
 <footer>
-    <p>© 2026 World Cyber Shield (WCS) | Cybersecurity Awareness Initiative</p>
+    <p>© 2026 World Cyber Shield | Built by Raju Zevenor</p>
 </footer>
 
-</body>
-    <script>
+<script>
 window.addEventListener("load", function() {
     document.body.classList.add("loaded");
 });
 </script>
+
+</body>
 </html>
