Enhance Two-Factor Authentication page content and style
Updated the title and enhanced styling for better readability. Added content on the importance and types of Two-Factor Authentication.

--- a/two-factor.html
+++ b/two-factor.html
@@ -1,36 +1,150 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Why Two-Factor Authentication is Important</title>
+    <title>Why Two-Factor Authentication (2FA) is Important</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             background:#0b1120;
-            color:white;
-            font-family:Arial;
+            color:#e2e8f0;
+            font-family:Arial, sans-serif;
             padding:40px;
-            max-width:800px;
+            max-width:900px;
             margin:auto;
+            line-height:1.8;
+
+            opacity: 0;
+            transform: translateY(20px);
+            transition: opacity 0.6s ease, transform 0.6s ease;
         }
-        h1 { color:#00f2ff; }
-        a { color:#00f2ff; text-decoration:none; }
-        li { margin-bottom:10px; }
+
+        body.loaded {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        h1, h2 {
+            color:#00f2ff;
+        }
+
+        .info-box {
+            background:#1e293b;
+            padding:20px;
+            margin:20px 0;
+            border-radius:6px;
+        }
+
+        a {
+            color:#00f2ff;
+            text-decoration:none;
+        }
     </style>
 </head>
+
 <body>
 
 <h1>Why Two-Factor Authentication (2FA) is Important</h1>
 
-<p>Two-Factor Authentication adds an extra layer of security.</p>
+<p><strong>Published:</strong> March 2026 | By Raju Zevenor</p>
+
+<p>
+In today's digital world, passwords alone are no longer enough to protect
+your accounts. Cybercriminals use phishing attacks, data breaches, and
+malware to steal login credentials every day. This is where
+<strong>Two-Factor Authentication (2FA)</strong> becomes essential.
+</p>
+
+<h2>What is Two-Factor Authentication?</h2>
+
+<p>
+Two-Factor Authentication is a security process that requires users to verify
+their identity using two different forms of authentication before accessing an account.
+</p>
+
+<div class="info-box">
+<b>Example:</b><br>
+1. Something you know → Your password<br>
+2. Something you have → OTP sent to your mobile<br>
+</div>
+
+<p>
+Even if someone steals your password, they cannot log in without the second verification step.
+</p>
+
+<h2>Why Passwords Alone Are Not Safe</h2>
+
+<p>
+Many users reuse the same password across multiple websites.
+If one website gets hacked, attackers can try the same password
+on banking, social media, and email accounts.
+</p>
+
+<p>
+Common password risks include:
+</p>
 
 <ul>
-<li>Even if someone steals your password, they cannot log in without the second verification.</li>
-<li>It protects your banking apps and social media accounts.</li>
-<li>It reduces the risk of hacking and identity theft.</li>
-<li>Use OTP, authentication apps, or biometric verification.</li>
+<li>Phishing emails that trick users</li>
+<li>Data leaks from compromised websites</li>
+<li>Weak passwords like 123456 or password</li>
+<li>Public Wi-Fi attacks</li>
 </ul>
 
+<h2>Types of Two-Factor Authentication</h2>
+
+<h3>1. SMS OTP</h3>
+<p>
+A one-time password sent to your mobile number.
+Simple but slightly less secure than app-based authentication.
+</p>
+
+<h3>2. Authenticator Apps</h3>
+<p>
+Apps like Google Authenticator generate secure time-based codes.
+This method is more secure than SMS.
+</p>
+
+<h3>3. Biometric Verification</h3>
+<p>
+Fingerprint or face recognition adds another strong layer of protection.
+</p>
+
+<h2>Benefits of Using 2FA</h2>
+
+<div class="info-box">
+✔ Prevents unauthorized access<br>
+✔ Protects banking and financial accounts<br>
+✔ Reduces risk of identity theft<br>
+✔ Adds extra security to social media accounts<br>
+</div>
+
+<h2>Real-Life Example</h2>
+
+<p>
+If a hacker gets your Instagram password but you have 2FA enabled,
+they will still need the OTP from your phone.
+Without it, they cannot access your account.
+</p>
+
+<h2>Conclusion</h2>
+
+<p>
+Cybersecurity is not optional anymore.
+Enabling Two-Factor Authentication takes less than two minutes,
+but it can save you from serious financial and personal loss.
+</p>
+
+<p>
+<strong>Protect your accounts today. Enable 2FA everywhere possible.</strong>
+</p>
+
 <p><a href="index.html">← Back to Blog</a></p>
+
+<script>
+window.addEventListener("load", function() {
+    document.body.classList.add("loaded");
+});
+</script>
 
 </body>
 </html>
