--- a/index.html
+++ b/index.html
@@ -52,11 +52,19 @@
 
         h2 {
             color: #00f2ff;
-            margin-top: 40px;
         }
 
+        /* Section animation */
         .section {
             margin-bottom: 60px;
+            opacity: 0;
+            transform: translateY(40px);
+            transition: all 0.8s ease;
+        }
+
+        .section.show {
+            opacity: 1;
+            transform: translateY(0);
         }
 
         .card {
@@ -64,6 +72,11 @@
             padding: 30px;
             margin-top: 20px;
             border-radius: 10px;
+            transition: 0.3s;
+        }
+
+        .card:hover {
+            transform: translateY(-5px);
         }
 
         .grid {
@@ -105,8 +118,7 @@
     <h1>World Cyber Shield</h1>
     <p>
         A Cybersecurity Awareness Initiative Dedicated to Protecting Individuals,
-        Students, and Businesses from Digital Threats, Online Fraud,
-        and Cybercrime in the Modern Digital Era.
+        Students, and Businesses from Digital Threats and Online Fraud.
     </p>
 </header>
 
@@ -114,7 +126,6 @@
     <a href="index.html">Home</a>
     <a href="mobile-security.html">Mobile Security</a>
     <a href="two-factor.html">Two-Factor Authentication</a>
-    <a href="#">Contact</a>
 </nav>
 
 <div class="container">
@@ -123,105 +134,54 @@
         <h2>About World Cyber Shield</h2>
         <p>
             World Cyber Shield (WCS) is a cybersecurity awareness platform created
-            to educate users about digital safety, fraud prevention, and modern cyber threats.
-            In today’s connected world, cybercrime is increasing rapidly.
-            From phishing scams to identity theft, online fraud is affecting millions.
-        </p>
-
-        <p>
-            Our mission is to spread digital awareness and provide practical security
-            knowledge that anyone can apply in daily life.
-            Cybersecurity is not only for IT professionals —
-            it is important for every smartphone user, student, and business owner.
+            to educate users about digital safety, fraud prevention, and cyber threats.
+            Cybercrime is rising rapidly in today’s digital era.
         </p>
     </div>
 
     <div class="section">
-        <h2>Why Cybersecurity Matters in 2026</h2>
-
+        <h2>Why Cybersecurity Matters</h2>
         <div class="card">
-            <p>
-                The digital economy is expanding. Online banking, UPI payments,
-                social media, cloud storage, and remote work have made life easier.
-                However, they have also increased cyber risks.
-            </p>
-
             <ul>
-                <li>Increase in phishing and scam calls</li>
-                <li>Rise in mobile malware attacks</li>
-                <li>Data breaches from weak passwords</li>
-                <li>Social engineering fraud</li>
+                <li>Increase in phishing scams</li>
+                <li>Online banking fraud</li>
+                <li>Identity theft risks</li>
+                <li>Social engineering attacks</li>
             </ul>
-
-            <p>
-                Awareness is the first step toward protection.
-                Prevention is always better than recovery.
-            </p>
         </div>
     </div>
 
     <div class="section">
         <h2>Our Key Focus Areas</h2>
-
         <div class="grid">
-
             <div class="card">
                 <h3>Mobile Security</h3>
-                <p>
-                    Smartphones store banking apps, personal photos,
-                    OTP messages, and sensitive data.
-                    Learning how to secure your mobile device
-                    is essential in today’s world.
-                </p>
+                <p>Learn how to secure smartphones and prevent malware attacks.</p>
                 <a href="mobile-security.html" class="btn">Read Article</a>
             </div>
 
             <div class="card">
                 <h3>Two-Factor Authentication</h3>
-                <p>
-                    Passwords alone are not enough.
-                    2FA adds an extra layer of protection
-                    and prevents unauthorized access.
-                </p>
+                <p>Understand why 2FA adds an essential extra layer of security.</p>
                 <a href="two-factor.html" class="btn">Read Article</a>
             </div>
-
-            <div class="card">
-                <h3>Scam Awareness</h3>
-                <p>
-                    Fraud calls and phishing links are increasing.
-                    Learn how to identify suspicious messages
-                    and protect your financial information.
-                </p>
-                <a href="#" class="btn">Coming Soon</a>
-            </div>
-
         </div>
     </div>
 
     <div class="section">
         <h2>Our Vision</h2>
         <p>
-            Our long-term goal is to create a digitally secure community
-            where individuals are educated about cyber threats and
-            empowered to protect themselves.
-        </p>
-
-        <p>
-            Through awareness articles, practical guides,
-            and educational content, World Cyber Shield
-            aims to contribute to a safer digital environment.
+            To build a digitally secure community where users are educated,
+            aware, and protected against cyber threats.
         </p>
     </div>
 
-    <div class="author-box">
+    <div class="section author-box">
         <h2>About the Author</h2>
         <p><strong>Raju Zevenor</strong></p>
         <p>
             Founder of World Cyber Shield. Passionate about cybersecurity,
-            fraud prevention, and digital awareness.
-            Dedicated to educating students and online users about
-            protecting their data and privacy in the modern internet era.
+            digital awareness, and fraud prevention.
         </p>
     </div>
 
@@ -230,6 +190,22 @@
 <footer>
     <p>© 2026 World Cyber Shield | Developed by Raju Zevenor</p>
 </footer>
+
+<script>
+    const sections = document.querySelectorAll('.section');
+
+    const observer = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+            if(entry.isIntersecting){
+                entry.target.classList.add('show');
+            }
+        });
+    }, { threshold: 0.2 });
+
+    sections.forEach(section => {
+        observer.observe(section);
+    });
+</script>
 
 </body>
 </html>
