Revise vision and author description in index.html
Updated the vision statement and author description for clarity and emphasis on cybersecurity education.

--- a/index.html
+++ b/index.html
@@ -170,9 +170,16 @@
 
     <div class="section">
         <h2>Our Vision</h2>
+       <p>
+            Our long-term goal is to create a digitally secure community
+            where individuals are educated about cyber threats and
+            empowered to protect themselves.
+        </p>
+
         <p>
-            To build a digitally secure community where users are educated,
-            aware, and protected against cyber threats.
+            Through awareness articles, practical guides,
+            and educational content, World Cyber Shield
+            aims to contribute to a safer digital environment.
         </p>
     </div>
 
@@ -180,8 +187,10 @@
         <h2>About the Author</h2>
         <p><strong>Raju Zevenor</strong></p>
         <p>
-            Founder of World Cyber Shield. Passionate about cybersecurity,
-            digital awareness, and fraud prevention.
+          Founder of World Cyber Shield. Passionate about cybersecurity,
+            fraud prevention, and digital awareness.
+            Dedicated to educating students and online users about
+            protecting their data and privacy in the modern internet era.
         </p>
     </div>
 
