--- a/index.html
+++ b/index.html
@@ -159,7 +159,39 @@
                 <p>Learn how to secure smartphones and prevent malware attacks.</p>
                 <a href="mobile-security.html" class="btn">Read Article</a>
             </div>
+                <div class="section">
+    <h2>Our Key Focus Areas</h2>
+    <div class="grid">
 
+        <div class="card">
+            <h3>Mobile Security</h3>
+            <p>
+                Learn how to secure smartphones, avoid malware,
+                and protect sensitive data from cyber threats.
+            </p>
+            <a href="mobile-security.html" class="btn">Read Article</a>
+        </div>
+
+        <div class="card">
+            <h3>Two-Factor Authentication</h3>
+            <p>
+                Understand why 2FA adds an essential extra layer of security
+                beyond passwords and prevents unauthorized access.
+            </p>
+            <a href="two-factor.html" class="btn">Read Article</a>
+        </div>
+
+        <div class="card">
+            <h3>Scam Call Awareness</h3>
+            <p>
+                Fraud calls and phishing attempts are increasing rapidly.
+                Learn how to identify suspicious calls and protect your money.
+            </p>
+            <a href="scam-calls.html" class="btn">Read Article</a>
+        </div>
+
+    </div>
+</div>
             <div class="card">
                 <h3>Two-Factor Authentication</h3>
                 <p>Understand why 2FA adds an essential extra layer of security.</p>
