Add link to Scam Call Awareness in navigation

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
     <a href="index.html">Home</a>
     <a href="mobile-security.html">Mobile Security</a>
     <a href="two-factor.html">Two-Factor Authentication</a>
+    <a href="scam-calls.html">Scam Call Awareness</a>
 </nav>
 
 <div class="container">
