Update navigation and add focus areas section

--- a/index.html
+++ b/index.html
@@ -124,9 +124,7 @@
 
 <nav>
     <a href="index.html">Home</a>
-    <a href="mobile-security.html">Mobile Security</a>
-    <a href="two-factor.html">Two-Factor Authentication</a>
-    <a href="scam-calls.html">Scam Call Awareness</a>
+    <a href="#focus">Focus Areas</a>
 </nav>
 
 <div class="container">
@@ -152,7 +150,7 @@
         </div>
     </div>
 
-    <div class="section">
+    <div class="section id="focus">
         <h2>Our Key Focus Areas</h2>
        <div class="grid">
         <div class="card">
